--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Berry angular 14+ admin template made using bootstrap 5, ng-bootstrap 6.x.x and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs."
+      content="Asesorías universitarias."
     />
     <meta
       name="keywords"
